# simple-timing-utility

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STI.c  STI.h
test/: CMakeLists.txt  run.py  test.c
